...
            fontFamily={fontFamily.bold}
            fontSize={35}
            lineHeight={lineHeight.h1}
          />
        </View>
        <TypographyRegular
          text="Everybody Can Train"
          color={colors.gray1}
          fontFamily={fontFamily.regular}
          fontSize={fontSize.subtitle}
          lineHeight={lineHeight.subtitle}
        />
        <ButtonLarge
          text="Get Started"
          onPress={navigateNextScreen}
          position="absolute"
          bottom={responsiveHeight(40)}
        />
      </View>
    </LinearGradient>
...
