...
    setDisplayAge(`${resultCalculateAge}`);
  }, []);

  return (
    <View style={styles.container}>
      <HeaderTitleBack title="Profile" />
      <ScrollView showsVerticalScrollIndicator={false} testID="scroll profile">
        <View style={styles.paddingStyle}>
          <ProfilePicture
            image={images.drinkImage}
            colorImage={colors.blue}
            text={`${firstName} ${lastName}`}
            description={goal}
...
            <ProfileSectionComponent label="Settings" imageSection={images.settingGradient} />
          </View>
          <Margin margin={15} />

          <ButtonLargeGradient
            buttonColor={colors.blueLinear}
            text="Logout"
            onPress={onPressLogOut}
            color={colors.white}
          />
          <Margin margin={15} />
        </View>
      </ScrollView>
...
